src/objects/BHAT_Activity_Weekly__c.object
<CustomObject>
    <description>BHAT</description>
    <fields>
        <fullName>BHAT_Week_Name__c</fullName>
        <formula>Name</formula>
        <label>BHAT Week Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Reviewed__c</fullName>
        <label>Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Owner:User.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Employee__c</fullName>
        <formula>Owner:User.Hourly_Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly_Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Owner:User.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName  &amp; &apos; &apos; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_EEID__c</fullName>
        <formula>Owner:User.LastName  &amp; &quot;, &quot; &amp;  Owner:User.FirstName  &amp; &quot; &quot; &amp;   Owner:User.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name EEID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Exempt_Employee__c</fullName>
        <formula>Owner:User.Non_Exempt_Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non_Exempt_Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerIdWithStartDate__c</fullName>
        <formula>CASESAFEID(OwnerId ) + &apos;#_#&apos; + Text(WeekStartDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerIdWithStartDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <label>Review Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                    <default>true</default>
                    <label>Not Reviewed</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BHAT_Activity_Weekly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>No Entry</fullName>
                </value>
                <value>
                    <fullName>Overtime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Time_Off_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Time Off Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_City__c</fullName>
        <formula>Owner:User.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekEndDate__c</fullName>
        <label>Week End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WeekStartDate__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WeeklyPaidBreakHours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WeeklyPaidBreakHours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeeklyTotalHours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WeeklyTotalHours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeeklyUnpaidLunchHours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WeeklyUnpaidLunchHours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Hours_Total__c</fullName>
        <formula>WeeklyPaidBreakHours__c + WeeklyTotalHours__c + Total_Time_Off_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Hours Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>owner_division__c</fullName>
        <formula>Owner:User.Division</formula>
        <label>owner division</label>
        <type>Text</type>
    </fields>
    <label>BHAT Activity Weekly</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>WeeklyTotalHours__c</columns>
        <columns>Weekly_Hours_Total__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Division__c</columns>
        <columns>Non_Exempt_Employee__c</columns>
        <columns>Reviewed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Current_Year</fullName>
        <columns>NAME</columns>
        <columns>WeekStartDate__c</columns>
        <columns>Name_EEID__c</columns>
        <columns>Status__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Name_EEID__c</field>
            <operation>contains</operation>
            <value>Henagan</value>
        </filters>
        <label>All Current Year</label>
        <language>en_US</language>
        <sharedTo>
            <group>HR_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_BHAT_This_Year</fullName>
        <columns>NAME</columns>
        <columns>WeekStartDate__c</columns>
        <columns>Name_EEID__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Division__c</columns>
        <columns>Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WeekStartDate__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Approved,Not Reviewed,Rejected</value>
        </filters>
        <filters>
            <field>Name_EEID__c</field>
            <operation>contains</operation>
            <value>Stan</value>
        </filters>
        <label>Approved BHAT This Year</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BHAT Week</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BHAT Activity Weekly</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>